--- a/Notenrechner/index.html
+++ b/Notenrechner/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/main.js"></script>
+    <script src="js/mainMitArray.js"></script>
+
+
 </head>
 <body>
 <h1> Notendurchschnitt kostenlos berechnen</h1>
 <p>Noten eingeben</p>
-<p>Dein Durchschnitt ist</p>
+<p>Dein Durchschnitt ist:</p>
+<p id="ausgabe"></p>
 <!-- Nummeric Textfield -->
 <!-- Numeric Textfield -->
 <form action="#">
@@ -51,6 +54,14 @@
     <div class="mdl-textfield mdl-js-textfield">
         <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="tfnote5">
         <label class="mdl-textfield__label" for="tfnote5">Number...</label>
+        <span class="mdl-textfield__error">Input is not a number!</span>
+    </div>
+</form>
+<!-- Numeric Textfield -->
+<form action="#">
+    <div class="mdl-textfield mdl-js-textfield">
+        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="tfnote6">
+        <label class="mdl-textfield__label" for="tfnote6">Number...</label>
         <span class="mdl-textfield__error">Input is not a number!</span>
     </div>
 </form>
